# basic.c

./: CMakeLists.txt  README.md
src/: main.c
src/cmd/: command_executor.c
src/eval/: expression_evaluator.c
src/interpreter/: basic_interpreter.c  basic_interpreter.h
src/tokenizer/: tokenizer.c
